# amazon-strands-agents

./: .env.example  Makefile  README.md  pyproject.toml
src/strands_agents_example/: agent.py  cli.py
